# ecommerce-retail-analytics-dbt-snowflake

./: .gitignore  CLAUDE.md  INSTALLATION.md  INSTRUCTIONS.md  README.md
ecommerce-retail-analytics/: .gitignore  pyproject.toml
ecommerce-retail-analytics/dbt/: .sqlfluff  .sqlfluffignore  dbt_project.yml  package-lock.yml  packages.yml
ecommerce-retail-analytics/dbt/macros/: generate_date_spine.sql  generate_schema_name.sql  incremental_filter.sql
ecommerce-retail-analytics/dbt/models/staging/: _docs.md  _sources.yml  _stg_ecommerce_models.yml  stg_ecommerce__customers.sql  stg_ecommerce__geolocation.sql  stg_ecommerce__order_items.sql  stg_ecommerce__order_payments.sql  stg_ecommerce__order_reviews.sql  stg_ecommerce__orders.sql  stg_ecommerce__product_category_translation.sql  stg_ecommerce__products.sql  stg_ecommerce__sellers.sql
ecommerce-retail-analytics/dbt/seeds/: rfm_segment_definitions.csv
ecommerce-retail-analytics/report/: Ecommerce Analytics.pbip  ecommerce-analytics-theme.json
ecommerce-retail-analytics/report/Ecommerce Analytics.Report/: .platform  definition.pbir
ecommerce-retail-analytics/report/Ecommerce Analytics.SemanticModel/: .platform  diagramLayout.json
ecommerce-retail-analytics/scripts/: download_kaggle_data.py  load_to_snowflake.py
ecommerce-retail-analytics/snowflake/: 1-roles-and-user-config.sql  2-warehouse-config.sql  3-database-schemas-config.sql  4-grant-access-config.sql  5-aws-storage-integration.sql  5-prod-environment-config.sql  5-verify-setup.sql  6-stage-&-file-format.sql
(+232 files in other folders)
