[project]
name = "ecommerce-retail-analytics"
version = "0.1.0"
description = "End-to-end retail analytics pipeline using dbt and Snowflake"
requires-python = "==3.12.*"
dependencies = [
    "dbt-snowflake>=1.7.0",
    "kaggle>=1.6.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "snowflake-connector-python[pandas]>=3.6.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
